@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,16 +25,15 @@
 /*
  * @test
  * @summary Ensure that classes found in jimage takes precedence over classes found in -Xbootclasspath/a.
- * AppCDS does not support uncompressed oops
- * @requires (vm.opt.UseCompressedOops == null) | (vm.opt.UseCompressedOops == true)
+ * @requires vm.cds
  * @library /test/lib /test/hotspot/jtreg/runtime/appcds
- * @modules java.activation
+ * @modules java.compiler
  *          jdk.jartool/sun.tools.jar
  * @compile ../../test-classes/DummyClassHelper.java
  * @compile ../../test-classes/java/net/HttpCookie.jasm
- * @compile ../../test-classes/javax/activation/MimeType.jasm
+ * @compile ../../../SharedArchiveFile/javax/annotation/processing/FilerException.jasm
  * @build sun.hotspot.WhiteBox
- * @run main ClassFileInstaller sun.hotspot.WhiteBox
+ * @run driver ClassFileInstaller sun.hotspot.WhiteBox
  * @run main DummyClassesInBootClassPath
  */
 
@@ -46,43 +45,49 @@ import jdk.test.lib.process.OutputAnalyzer;
 public class DummyClassesInBootClassPath {
     private static final String METHOD_NAME = "thisClassIsDummy()";
 
+    static void checkOutput(OutputAnalyzer output, String[] classNames) throws Exception {
+        for (int i = 0; i < classNames.length; i++) {
+            String cn = classNames[i].replace('/', '.');
+            TestCommon.checkExec(output,
+                "java.lang.NoSuchMethodException: " + cn + "." +
+                METHOD_NAME);
+            output.shouldNotContain(cn + ".class should be in shared space.");
+        }
+    }
+
     public static void main(String[] args) throws Exception {
         String classNames[] = { "java/net/HttpCookie",
-                                "javax/activation/MimeType"};
+                                "javax/annotation/processing/FilerException"};
         JarBuilder.build("dummyClasses", classNames[0], classNames[1]);
 
         String appJar = TestCommon.getTestJar("dummyClasses.jar");
         OutputAnalyzer dumpOutput = TestCommon.dump(
             appJar, classNames, "-Xbootclasspath/a:" + appJar);
-
         List<String> argsList = new ArrayList<String>();
         for (int i = 0; i < classNames.length; i++) {
             argsList.add(classNames[i].replace('/', '.'));
         }
         String[] arguments = new String[argsList.size()];
         arguments = argsList.toArray(arguments);
-        OutputAnalyzer execOutput = TestCommon.execCommon(
-            "-cp", TestCommon.getTestDir("."), "-verbose:class",
-            "--add-modules", "java.activation",
-            "-Xbootclasspath/a:" + appJar, "DummyClassHelper",
-            arguments[0], arguments[1]);
-        for (int i = 0; i < arguments.length; i++) {
-            TestCommon.checkExec(execOutput,
-                "java.lang.NoSuchMethodException: " + arguments[i] + "." +
-                METHOD_NAME);
-        }
+        TestCommon.run(
+            "-Xbootclasspath/a:" + appJar,
+            "DummyClassHelper", arguments[0], arguments[1])
+          .assertNormalExit(output -> checkOutput(output, classNames));
 
         JarBuilder.build(true, "WhiteBox", "sun/hotspot/WhiteBox");
         String whiteBoxJar = TestCommon.getTestJar("WhiteBox.jar");
         String bootClassPath = "-Xbootclasspath/a:" + appJar +
             File.pathSeparator + whiteBoxJar;
+        dumpOutput = TestCommon.dump(
+            appJar, classNames, bootClassPath);
         argsList.add("testWithWhiteBox");
         arguments = new String[argsList.size()];
         arguments = argsList.toArray(arguments);
         String[] opts = {"-XX:+UnlockDiagnosticVMOptions", "-XX:+WhiteBoxAPI",
-            bootClassPath, "-XX:+TraceClassPaths", "DummyClassHelper",
-            arguments[0], arguments[1], arguments[2]};
-        OutputAnalyzer output = TestCommon.execCommon(opts);
+            bootClassPath, "-Xlog:class+path=trace",
+            "DummyClassHelper", arguments[0], arguments[1], arguments[2]};
+        TestCommon.run(opts)
+          .assertNormalExit(output -> checkOutput(output, classNames));
     }
 }
 
